refactor(api)!: renomear a rota de menor preço registrado
